# Portal

./: CMakeLists.txt
Libs/DX_Effects11/: CMakeLists.txt
Libs/DX_Tex/: CMakeLists.txt
Libs/Fmod/: CMakeLists.txt
Libs/PhysX/: CMakeLists.txt
OverlordEngine/: BaseComponent.h  BinaryReader.h  BoneObject.cpp  BoneObject.h  CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  CenterGlow.cpp  CenterGlow.h  ColliderComponent.cpp  ColorMaterial.h  CombineResources.cpp  CombineResources.h  Components.h  ControllerComponent.cpp  ControllerComponent.h  CubePrefab.cpp  DebugRenderer.cpp  DiffuseMaterial.cpp  DiffuseMaterial.h  DiffuseMaterial_Shadow.cpp  DiffuseMaterial_Shadow.h  EffectHelper.cpp  EffectHelper.h  Enumerations.h  FixedCamera.cpp  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  GeneralStructs.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  Material.cpp  MaterialManager.cpp  MaterialManager.h  MeshDrawComponent.cpp  MeshDrawComponent.h  (+50 more)
Portal/: CMakeLists.txt  ControllerScheme.cpp  ControllerScheme.h  Main.cpp  MainGame.cpp  MainGame.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  MenuButton.cpp  MenuButton.h  PauseMenu.cpp  PauseMenu.h  Portal.vcxproj  Portal.vcxproj.filters  PortalCharacterController.cpp  PortalCharacterController.h  PortalMaterial.cpp  PortalMaterial.h  PortalPrefab.cpp  PortalPrefab.h  PortalPuzzle1.cpp  PortalPuzzle1.h  WallPrefab.cpp  WallPrefab.h  stdafx.h
Portal/Resources/Effects/: ParticleRenderer.fx  Portal.fx  PosNormTex3D_Skinned.fx  ShadowMapGenerator.fx  SpikeyShader.fx  SpriteRenderer.fx
Portal/Resources/Effects/Post/: Blur.fx  CenterGlow.fx
Portal/Resources/Effects/Shadow/: PosNormTex3D_Shadow.fx
Portal/Resources/Meshes/: Ball.ovm  ButtonBall.ovm  ButtonBall.ovpt  ButtonCube.ovm  ButtonCube.ovpt  Desk.ovm  DoorClosed.ovm  DoorOpen.ovm  ItemDropper.ovpt  PBody.ovm  PortalGun.ovm
